local-desktop-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  namespace: iot-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: your-app.local # Or any other hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-ingress-nginx-controller-admission  # The name of your backend service
                port:
                  number: 80 # The port your service is listening on
